-[Front-end]: add ajax for searching username

--- a/ajaxdemo.html
+++ b/ajaxdemo.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,14 +6,31 @@
 
 	<title>AJax Demo</title>
 
-	<!-- Bootstrap core CSS -->
 	<link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
-
-	<!-- Custom styles for this template -->
 	<link href="../Demo_AJAX/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-	
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">Demo AJax</a>
+		
+	</nav>
+	<div class="container mt-5">	
+		<h1 class="text-center">Search Github Users</h1>
+		<p class="lead text-center">Enter a username to finding</p>
+		<input type="text" id="searchUser" class="form-control" placeholder="Enter Github Username">
+	</div>
+
+	<!-- Load Ajax -->
+	<div id="profile">
+		
+	</div>
+
+    	<!-- ================================================== -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../Demo_AJAX/js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 </body>
 </html>
